manuel_francisco/session-01/exercise-02/mariadb-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mariadb
  namespace: exercise-02
  labels:
    app: mariadb
    exercise: "02"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      # https://hub.docker.com/r/bitnami/mariadb/
      - name: mariadb
        image: bitnami/mariadb:latest
        ports:
        - name: mysql
          containerPort: 3306
        livenessProbe:
          exec:
            command:
            - bash
            - -c
            - mysqladmin ping
          initialDelaySeconds: 40
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command:
            - bash
            - -c
            - mysqladmin ping
          initialDelaySeconds: 5
          timeoutSeconds: 1
