manuel_francisco/session-01/exercise-02/wordpress-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordpress
  namespace: exercise-02
  labels:
    app: wordpress
    exercise: "02"
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      # https://hub.docker.com/r/bitnami/wordpress/
      - name: wordpress
        image: bitnami/wordpress:latest
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        livenessProbe:
          httpGet:
            path: /wp-login.php
            port: http
          initialDelaySeconds: 40
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /wp-login.php
            port: http
          initialDelaySeconds: 10
          periodSeconds: 3
