manuel_francisco/session-01/exercise-02/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wordpress
  namespace: exercise-02
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "my_🌎"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
spec:
  rules:
  - host: wordpress-exercise-02.com
    http:
      paths:
        - path: "/"
          backend:
            serviceName: wordpress
            servicePort: 80
